--- a/README
+++ b/README
@@ -19,10 +19,10 @@ cd flask_env
 sudo virtualenv env
 source env/bin/activate
 sudo pip install Flask==0.10.1
-sudo mkdir flask_project && cd flask_project
-sudo mkdir static (statyczna zawartosc serwera, trzeba dac sciezke nginx'owi)
+sudo mkdir flask_project && cd flask_project //nie trzeba jak sciagacie z gita
+sudo mkdir static (statyczna zawartosc serwera, trzeba dac sciezke nginx'owi) //nie trzeba jak sciagacie z gita
 
-w katalogu flask_project tworzymy sobie aplikacje pythonowe, ktore uruchamiac bedzie flask, np.:
+w katalogu flask_project tworzymy sobie aplikacje pythonowe, ktore uruchamiac bedzie flask, np.: //nie trzeba jak sciagacie z gita
 ---- *** ----
 from flask import Flask, jsonify
 app = Flask(__name__)
@@ -44,7 +44,8 @@ if __name__ == '__main__':
 MAKE
 plik make kopiuje do katalogów nginxa powyzsza strukture katalogow, jako argument podajemy nazwe pliku konfiguracyjnego, ktory na zostac przeniesiony do /sites/enabled/:
 sudo make enabled=nazwa_pliku
-UWAGA samo make robi dowiazanie do katalogu, nie do pliku, wiec nie zapominajcie o argumencie. W razie czego ngonx sie pluje i trezba skasowac dowiazanie w /etc/nginx/sits-enabled. Nie przejmujcie się errorem ze dowiazanie istnieje. Jak istnieje to super.
+UWAGA samo make robi dowiazanie do katalogu, nie do pliku, wiec nie zapominajcie o argumencie. W razie czego nginx sie pluje i trzeba skasowac dowiazanie w /etc/nginx/sits-enabled. Nie przejmujcie się errorem ze dowiazanie istnieje. Jak istnieje to super.
+Jeżeli macie bledy forbidden, sprawdzcie czy mamy tego samego uzytkownika (ja mam www-data). W razie czego trzeba to zmienic w make'u w poleceniu chown ... .
 
 URUCHAMIANIE
 sudo service nginx start / status / stop / reload
