--- a/README
+++ b/README
@@ -46,6 +46,7 @@ plik make kopiuje do katalogów nginxa powyzsza strukture katalogow, jako argume
 sudo make enabled=nazwa_pliku
 UWAGA samo make robi dowiazanie do katalogu, nie do pliku, wiec nie zapominajcie o argumencie. W razie czego nginx sie pluje i trzeba skasowac dowiazanie w /etc/nginx/sits-enabled. Nie przejmujcie się errorem ze dowiazanie istnieje. Jak istnieje to super.
 Jeżeli macie bledy forbidden, sprawdzcie czy mamy tego samego uzytkownika (ja mam www-data). W razie czego trzeba to zmienic w make'u w poleceniu chown ... .
+W PLIKU KONFIGURACYJNYM KTORY AKTUALNIE ISTNIEJE TRZEBA PODMIENIC ADRES 127.0.0.1 NA IP.
 
 URUCHAMIANIE
 sudo service nginx start / status / stop / reload
